--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "repository": "https://github.com/italocedrosales/gympoint.git",
   "author": "Italo Cedro <italo.cedro.sales@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon src/server.js",
+    "dev:debug": "nodemon --inspect src/server.js"
+  },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^1.19.4",
+    "sucrase": "^3.10.1"
   }
 }
