--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev:debug": "nodemon --inspect src/server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "nodemon": "^1.19.4",
     "pg": "^7.12.1",
